[FLINK-16504][dynamodb connector] Dynamodb sink integration tests replace java9 factory methods for collections with guava